[package]
name = "td-platformer"
version = "0.1.0"
publish = false
authors = ["Hajime Morikoshi <h.morikosi@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.11" }
bevy_asset_loader = { version = "0.12" }
rand = "0.8.3"
bevy_rapier2d = { version = "0.16", features = [ "debug-render" ] }
bevy_prototype_lyon = "0.6.0"

[build-dependencies]
embed-resource = "1.4"
